Fix compilation errors and address code review issues
Compilation Fixes:
- Fix UserModel constructor call with correct 24 parameters
- Fix GSI queries to use parseGlobalSecondaryIndexSchema() with IndexSchema
- Add missing imports (IndexSchema, QuerySpec, RangeKeyCondition, StreamSupport, Map)

Critical Security & Reliability Fixes:
- Limit thread pool max size to 100 with CallerRunsPolicy (prevent OutOfMemoryError)
- Enforce webhook signature verification (fail closed, not open)

Code Quality Improvements:
- Replace magic strings with POST_SOURCE_SLACK constant
- Add input validation for required webhook fields (channelId, messageTs)

Co-authored-by: Matus Faro <matusfaro@users.noreply.github.com>